--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/abhrabasak/rsgit"
 
 [dependencies]
+clap = { version = "4.5.34", features = ["derive"] }
