--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ repository = "https://github.com/abhrabasak/rsgit"
 
 [dependencies]
 clap = { version = "4.5.34", features = ["derive"] }
+flate2 = "1.1.0"
